[Corrected#162568371]Corrected the link

--- a/UI/register.html
+++ b/UI/register.html
@@ -15,7 +15,7 @@
                 <a href="index.html"><h4>STACKOVERFLOW-LITE</h4></a>
             </div>
         </div>        
-    <form class="box" action="addittional_info.html" method='post'>
+    <form class="box" action="dashboard.html" method='post'>
         <h1>SIGN UP</h1>
         <input type="text" name="" placeholder="Username">
         <input type="text" name="" placeholder="First Name">
