[updated#162568122]Changed the dashboard link

--- a/UI/index.html
+++ b/UI/index.html
@@ -14,7 +14,7 @@
                 <h4>STACKOVERFLOW-LITE</h4>
             </div>
             <div class="rightmenu">
-                    <h4><a href="guest_dashboad.html">EXPLORE</a></h4>
+                    <h4><a href="guest_dashboard.html">EXPLORE</a></h4>
             </div>
         </div>
         <div class="text">
